# MaximalSand

./: CMakeLists.txt  Readme.md  index.html
src/: WindowManager.cpp  WindowManager.hpp  chunkManager.cpp  chunkManager.hpp  colors.hpp  font8x8.hpp  main.cpp  sand.cpp  sand.hpp  utils.hpp
src/components/: ButtonComponent.cpp  ButtonComponent.hpp  ColorComponent.cpp  ColorComponent.hpp  ColorSelectorComponent.cpp  ColorSelectorComponent.hpp  ColorShowComponent.cpp  ColorShowComponent.hpp  SandComponent.cpp  SandComponent.hpp  SelectorComponent.cpp  SelectorComponent.hpp  TextComponent.cpp  TextComponent.hpp  windowComponent.hpp
src/windows/: ClearConfirmationWindow.cpp  ClearConfirmationWindow.hpp  FallbackWindow.cpp  FallbackWindow.hpp  HelpWindow.cpp  HelpWindow.hpp  MainWindow.cpp  MainWindow.hpp  PaletteWindow.cpp  PaletteWindow.hpp  Window.cpp  Window.hpp
